--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,3 @@
-/*
- *
- * CSS written based on SMACSS architecture.
- * To learn more, visit: http://smacss.com/
- * 
- * For simplicity, no reset or normalize is added. 
- * To learn more, visit: https://css-tricks.com/reboot-resets-reasoning/
- *
-*/
-
-
 /* ---- Base Rules ---- */
 body {
     background: rgb(102, 160, 88);
@@ -90,7 +79,7 @@ section {
 
 /* Header Styles */
 .page__header {
-    background: #fff;
+    background: rgb(43, 42, 42);
     position: fixed;
     top: 0;
     width: 100%;
