feat: add focus on current section

--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ section {
 
 .navbar__menu .menu__link:hover {
     background: #333;
-    color: #fff;
+    color: rgb(151, 151, 151);
     transition: ease 0.3s all;
 }
 
